# publishing-platform

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
docs/: multi-tenant-architecture.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_rls_policies.py  003_publisher_architecture.py
project-management/: blockers-and-notes.md  completed-tasks.md  implementation-roadmap.md  phase-1-progress-summary.md  phase-1-todos.md  phase-2-progress-summary.md  phase-2-todos.md  phase-3-todos.md  phase-4-todos.md
scripts/: dev-setup.sh  init-db.sql  run-migrations.sh  simple-test.sh  test-api.sh  test-migration.sh  verify-service.sh
src/: __init__.py  main.py
src/api/dependencies/: common.py
src/api/routes/: auth.py  health.py  personal_tokens.py  publishers.py  recordings.py  search.py  service_tokens.py  songwriters.py  works.py
src/core/: database.py  settings.py
src/middleware/: auth.py  enhanced_auth.py  logging.py  rate_limiting.py  tenant.py
src/models/: __init__.py  account.py  base.py  permission.py  personal_access_token.py  publisher.py  recording.py  role.py  service_account.py  service_token.py  songwriter.py  tenant.py  user.py  user_publisher.py  user_session.py  work.py
src/schemas/: __init__.py  base.py  publisher.py  recording.py  search.py  songwriter.py  work.py
src/services/: account_service.py  business_rules.py  events.py  publisher_service.py  service_account_service.py  token_service.py  user_service.py
src/utils/: __init__.py  validators.py
tests/: conftest.py  test_health.py
